--- a/src/index.css
+++ b/src/index.css
@@ -34,17 +34,19 @@
     font-weight: 600;
     padding: 10px;
     border: none;
-    background: #000;
-    color: #fff;
-    bottom: 80px;
-    right: 100px;
-    transition: all 0.8s;
-    border-radius: 5px;
-}
-.home-btn:hover{
     border-radius: 40px;
     background: rgb(251, 181, 4);
     color: #000;
+    bottom: 80px;
+    right: 100px;
+    transition: all 0.8s;
+}
+.home-btn:hover{
+    border-radius: 5px;
+    background: transparent;
+    color: #000;
+    border: 2px solid #000;
+    font-weight: 700;
 }
 .home-title{
     color: #000;
